# semdiff-cli

./: LICENSE  README.md  cli.py  semdiff  setup.cfg
