[metadata]
name = semdiff
version = 0.0.2
author = Semdiff.io
author_email = laszlo@nodebee.io
description = CLI client for the semdiff API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/semdiff-io/semdiff-cli
project_urls =
    Bug Tracker = https://github.com/semdiff-io/semdiff-cli/issues
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Topic :: Software Development :: Quality Assurance
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.6
scripts = semdiff
install_requires =
    requests

